--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,4 +8,12 @@ header{
   height: $header-height;
   background: $skyblue;
   border-bottom: 1px solid $grey;
+
+  h1{
+    margin: 0;
+    text-align: center;
+    line-height: $header-height;
+    color: $white;
+    font-size: 30px;
+  }
 }
