--- a/src/sass/components/_table.scss
+++ b/src/sass/components/_table.scss
@@ -1,7 +1,5 @@
 .table {
   width: 100%;
-  max-width: 1000px;
-  margin: 50px auto 0 auto;
   border-spacing: 0;
 
   &--th {
@@ -15,6 +13,21 @@
 
     &:hover {
       color: $grey-dark;
+    }
+
+    &.sort:after{
+      content: '➔';
+      display: inline-block;
+      font-size: 0.8rem;
+      margin: 0 0 0 5px;
+      line-height: 30px;
+      transition: all 0.3s;
+    }
+    &.decending:after{
+      transform: rotate(-90deg);
+    }
+    &.ascending:after{
+      transform: rotate(90deg);
     }
   }
 
